# cpp-learning

./: CMakeLists.txt  Person_Count.cpp  face.1.cpp  model2.cpp  opencv.cpp
src/: Detect.cpp
